--- a/08_movie_data.ipynb
+++ b/08_movie_data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "7f103712-82c7-48f0-8633-7b160156ef50",
    "metadata": {},
    "outputs": [],
@@ -251,12 +251,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "b42ac116-e4c6-47a8-9fd2-032d9e6f81c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 복습\n",
+    "# 복습 완료\n",
     "# 기본작업: 일별 박스오피스 url 가져오기 >> url 내용 다운 받기 >> json을 dict으로 바꾸기 >> 폴더 열기\n",
     "    # api 키를 활용해서 가져오는 것이라서 url_maker 활용하는 거 >> 여기에 api 키 넣어놨기 때문\n",
     "\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "a56123ac-db9a-4efa-9fda-c58d2b4519d6",
    "metadata": {},
    "outputs": [
@@ -404,12 +404,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 15,
    "id": "f3a7952b-9c71-402d-bf39-d4bdbc64ee75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 복습\n",
+    "# 복습 중\n",
     "def get_movie_details(target_date):\n",
     "    daily_boxoffice = url_maker.daily_boxoffice_url(target_date, repNationCd='K')\n",
     "    r = requests.get(daily_boxoffice).json()\n",
@@ -420,10 +420,15 @@
     "    \n",
     "    l = []\n",
     "    for movie in movies:\n",
-    "        l.append({movie['movieNm'], movie['openDt'], movie['rank']})\n",
+    "        l.append({movie['movieNm']})\n",
+    "\n",
+    "        # 그럼 여러 영화들의 dict이 묶여있는 movies란 객체를 for문으로 돌리면, 개별 영화인 movie가 나오게 되잖아. 그때 그 개별 영화들 중 key 값인 'openDt'를 기준으로 movies를 정렬하라는 의미인 코드인 것\n",
     "    print(l)\n",
-    "    sorted_l = l.sort(['openDt'])\n",
-    "    print(sorted_l)\n",
+    "                  \n",
+    "                  # , movie['openDt'], movie['rank']})\n",
+    "    # print(l)\n",
+    "    # sorted_l = l.sort(['openDt'])\n",
+    "    # print(sorted_l)\n",
     "\n",
     "    \n",
     "    #     movieNm = movie['movieNm']\n",
@@ -436,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 16,
    "id": "23fa5383-2d1d-4052-a21d-efbf3a86811f",
    "metadata": {},
    "outputs": [
@@ -444,7 +449,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'rnum': '1', 'rank': '1', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20233006', 'movieNm': '히트맨2', 'openDt': '2025-01-22', 'salesAmt': '1663433100', 'salesShare': '46.0', 'salesInten': '525167660', 'salesChange': '46.1', 'salesAcc': '17240257840', 'audiCnt': '177129', 'audiInten': '40686', 'audiChange': '29.8', 'audiAcc': '1831557', 'scrnCnt': '1495', 'showCnt': '6165'}, {'rnum': '2', 'rank': '2', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20247450', 'movieNm': '검은 수녀들', 'openDt': '2025-01-24', 'salesAmt': '934872220', 'salesShare': '25.8', 'salesInten': '247202440', 'salesChange': '35.9', 'salesAcc': '13206216740', 'audiCnt': '96043', 'audiInten': '14734', 'audiChange': '18.1', 'audiAcc': '1363840', 'scrnCnt': '1192', 'showCnt': '4387'}, {'rnum': '3', 'rank': '3', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20223819', 'movieNm': '말할 수 없는 비밀', 'openDt': '2025-01-27', 'salesAmt': '612619860', 'salesShare': '16.9', 'salesInten': '255290400', 'salesChange': '71.4', 'salesAcc': '2831121780', 'audiCnt': '63000', 'audiInten': '19506', 'audiChange': '44.8', 'audiAcc': '298293', 'scrnCnt': '846', 'showCnt': '2521'}, {'rnum': '4', 'rank': '4', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20228796', 'movieNm': '하얼빈', 'openDt': '2024-12-24', 'salesAmt': '221288880', 'salesShare': '6.1', 'salesInten': '34724080', 'salesChange': '18.6', 'salesAcc': '46361411980', 'audiCnt': '23298', 'audiInten': '1383', 'audiChange': '6.3', 'audiAcc': '4847097', 'scrnCnt': '711', 'showCnt': '1390'}, {'rnum': '5', 'rank': '5', 'rankInten': '1', 'rankOldAndNew': 'OLD', 'movieCd': '20246361', 'movieNm': '뽀로로 극장판 바닷속 대모험', 'openDt': '2025-01-01', 'salesAmt': '53373900', 'salesShare': '1.5', 'salesInten': '32139000', 'salesChange': '151.3', 'salesAcc': '3295806970', 'audiCnt': '5903', 'audiInten': '3430', 'audiChange': '138.7', 'audiAcc': '382497', 'scrnCnt': '299', 'showCnt': '343'}, {'rnum': '6', 'rank': '6', 'rankInten': '-1', 'rankOldAndNew': 'OLD', 'movieCd': '20241110', 'movieNm': '아이유 콘서트 : 더 위닝', 'openDt': '2025-01-24', 'salesAmt': '85348500', 'salesShare': '2.4', 'salesInten': '14361000', 'salesChange': '20.2', 'salesAcc': '1360798000', 'audiCnt': '3156', 'audiInten': '525', 'audiChange': '20', 'audiAcc': '49561', 'scrnCnt': '113', 'showCnt': '316'}, {'rnum': '7', 'rank': '7', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20224303', 'movieNm': '귀신경찰', 'openDt': '2025-01-24', 'salesAmt': '15917100', 'salesShare': '0.4', 'salesInten': '3800980', 'salesChange': '31.4', 'salesAcc': '406114500', 'audiCnt': '1860', 'audiInten': '371', 'audiChange': '24.9', 'audiAcc': '45716', 'scrnCnt': '160', 'showCnt': '205'}, {'rnum': '8', 'rank': '8', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20200142', 'movieNm': '소방관', 'openDt': '2024-12-04', 'salesAmt': '13955700', 'salesShare': '0.4', 'salesInten': '2822700', 'salesChange': '25.4', 'salesAcc': '36260079370', 'audiCnt': '1418', 'audiInten': '101', 'audiChange': '7.7', 'audiAcc': '3852421', 'scrnCnt': '134', 'showCnt': '157'}, {'rnum': '9', 'rank': '9', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20110279', 'movieNm': '마당을 나온 암탉', 'openDt': '2011-07-28', 'salesAmt': '8933860', 'salesShare': '0.2', 'salesInten': '3591660', 'salesChange': '67.2', 'salesAcc': '14792455497', 'audiCnt': '1038', 'audiInten': '394', 'audiChange': '61.2', 'audiAcc': '2216721', 'scrnCnt': '109', 'showCnt': '131'}, {'rnum': '10', 'rank': '10', 'rankInten': '4', 'rankOldAndNew': 'OLD', 'movieCd': '20252147', 'movieNm': '뜻밖의 순간 : 언익스펙티드 저니', 'openDt': ' ', 'salesAmt': '723000', 'salesShare': '0.0', 'salesInten': '438000', 'salesChange': '153.7', 'salesAcc': '9732000', 'audiCnt': '241', 'audiInten': '146', 'audiChange': '153.7', 'audiAcc': '3244', 'scrnCnt': '1', 'showCnt': '2'}]\n"
+      "20250201 한국 영화 박스오피스 (개봉일 순)\n",
+      "[{'히트맨2'}, {'검은 수녀들'}, {'말할 수 없는 비밀'}, {'하얼빈'}, {'뽀로로 극장판 바닷속 대모험'}, {'아이유 콘서트 : 더 위닝'}, {'귀신경찰'}, {'소방관'}, {'마당을 나온 암탉'}, {'뜻밖의 순간 : 언익스펙티드 저니'}]\n"
      ]
     }
    ],
